[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.10", features = ["blocking","json"]} 
futures = "0.3" # for our async / await blocks
tokio = { version = "1.16.0", features = ["full"] } 
base64 = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
# rayon = "1.4.1"
# walkdir = "2"
# regex = "1"
# chrono = "0.4"  
# home = "0.5.3"