[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
egui = "0.17.0"
egui_extras = { version = "0.17.0", features = ["image", "svg"] }  
image = { version = "0.24.1", default-features = false, features = ["png"] }
reqwest = {version = "0.11.10", features = ["blocking","json"]} 
futures = "0.3"  
tokio = { version = "1.16.0", features = ["full"] } 
base64 = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clipboard = "0.5.0"
 