[package]
name = "anyfile"
version = "1.0.3"
edition = "2021" 
authors = ["mjehrhart <https://github.com/mjehrhart>"] 
license = "MIT"
repository = "https://github.com/mjehrhart/minty"
description = "An easier way to store and reference asset files from your public repo"
keywords = ["github", "asset", "filesystem", "minty", "ffind"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
egui = "0.17.0"
egui_extras = { version = "0.17.0", features = ["image", "svg"] }  
image = { version = "0.24.1", default-features = false, features = ["png"] }
reqwest = {version = "0.11.10", features = ["blocking","json"]} 
futures = "0.3"  
tokio = { version = "1.16.0", features = ["full"] } 
base64 = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clipboard = "0.5.0"
cookie = "0.16.0"
home = "0.5.3"
